--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,58 @@
+
 <li class="collection-item user">
+
     <%= user.name %>
-    <% if user.is_admin? %>
-        <div  class="secondary-content"><i class="material-icons">grade</i></div>
+    <div  class="secondary-content">
+    <!--　村画面の場合 -->
+    <% if current_user.action_type == 0 %>
+        待機中
+    <% else %>
+        <!-- 死亡の場合 -->
+        <% if user.is_dead  || current_user.is_dead%>
+            死亡
+        <!-- 自分の場合 -->
+        <% elsif user.id == current_user.id  %>
+            <%= Job.find(current_user.job_id).name  %>
+        <% else %>
+            <!--　昼画面の場合 -->
+            <% if current_user.action_type == 1 %>
+            昼ですね
+            <% end %>
+            <!--　夜画面の場合 -->
+            <% if current_user.action_type == 2 %>
+                
+                    
+                    <!--　夜画面の場合　人狼 -->
+                    <% if current_user.job_id == 1 %>
+                        
+                        
+                        <% if user.job_id == 1 %>
+                            人狼
+                        <% else %>
+                        <%= link_to "弱", night_villages_path(user_id:user.id,level:1), remote: true, class: ""%>
+                        <%= link_to "中", night_villages_path(user_id:user.id,level:2), remote: true%>
+                        <%= link_to "強", night_villages_path(user_id:user.id,level:3), remote: true%>
+                        <% end %>
+                    <!--　夜画面の場合　占い師 -->
+                    <% elsif current_user.job_id == 3 %>
+                        <%= link_to "占う", night_villages_path(user.id), remote: true, onclick:"reading(" + user.id.to_s + ",'" + user.name  + "'," + user.job_id.to_s + ")"%>
+                    <!--　夜画面の場合　騎士 -->
+                    <% elsif current_user.job_id == 4 %>
+                    
+                    <!--　夜画面の場合　霊媒師 -->
+                    <% elsif current_user.job_id == 5 %>
+                    
+                    <!--　夜画面の場合　村人　狂人 -->
+                    <% else %>
+                    <%= link_to "疑う", night_villages_path(user.id), remote: true%>
+                    <% end %>
+                
+            <% end %>
+            <!--　投票画面の場合 -->
+            <% if current_user.action_type == 3 %>
+                <%= link_to "投票", vote_villages_path(user_id:user.id), remote: true%>
+            <% end %>
+        <% end %>
     <% end %>
+    </div>
 </li>
