--- a/app/views/villages/search.html.erb
+++ b/app/views/villages/search.html.erb
@@ -3,3 +3,7 @@
 <div class="collection">
     <%= render @villages %>
 </div>
+<div style="text-align: center;">
+  <%= link_to "村を作成する", new_village_path ,
+                              class: "waves-effect waves-light btn-large"%>
+</div>
