--- a/app/views/villages/show.html.erb
+++ b/app/views/villages/show.html.erb
@@ -2,19 +2,6 @@
 <h3>
 	<%= @village.name %>
 </h3>
-<%= @village.action_type %>
-<%= link_to "ゲーム開始", start_villages_path(@village),
-                                class: "waves-effect waves-light btn-large", remote: true%>
-<%= link_to "ゲーム終了", stop_villages_path(@village),
-                                class: "waves-effect waves-light btn-large", remote: true%>
-<%= link_to "リロード", reload_villages_path(village_id:@village.id),
-                                class: "waves-effect waves-light btn-large", remote: true,id:"reload"%>
-<%= link_to "投票へ移る", to_vote_villages_path(village_id:@village.id),
-                                class: "waves-effect waves-light btn-large", remote: true%>
-
-
-<%= link_to "退出", search_villages_path,
-                                class: "waves-effect waves-light btn-large"%>
 <div class="row card">
 	<div class="">
 		<ul class="tabs">
@@ -80,7 +67,9 @@
 		<% end %>
 	</div>
 </div>
-
+<div id="button" style="text-align: center;">
+<%= render :partial => "button" %>
+</div>
 <script type="text/javascript">
 
 
