--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
       <li><%= link_to "Help", help_path %></li>
       <% if signed_in? %>
       <% if current_user.village_id%>
-      <li><%= link_to "ゲーム終了", stop_villages_path(@village),remote: true%></li>
+      <li><%= link_to "ゲーム終了", stop_village_games_path(@village, village_id:current_user.village_id),remote: true%></li>
       <li><%= link_to "リロード", reload_villages_path(village_id:@village.id), remote: true,id:"reload"%>
       <li>
       <li><%= link_to "退出", search_villages_path %></li>
@@ -28,7 +28,7 @@
       <li><%= link_to "Help", help_path %></li>
       <% if signed_in? %>
       <% if @village %>
-      <li><%= link_to "ゲーム終了", stop_villages_path(@village),remote: true%></li>
+      <li><%= link_to "ゲーム終了", stop_village_games_path(@village, village_id:current_user.village_id),remote: true%></li>
       <li><%= link_to "リロード", reload_villages_path(village_id:@village.id), remote: true,id:"reload"%>
       <li>
       <li><%= link_to "退出", search_villages_path %></li>
