--- a/app/views/villages/_button.html.erb
+++ b/app/views/villages/_button.html.erb
@@ -1,8 +1,8 @@
 <% if current_user.action_type == 'no_Game' %>
-<%= link_to "ゲーム開始", start_villages_path(@village),
+<%= link_to "ゲーム開始", new_village_game_path(@village, village_id:@village.id),
                                 class: "waves-effect waves-light btn-large", remote: true%>
 <% elsif current_user.action_type == 'day' %>
-<%= link_to "投票へ移る", to_vote_villages_path(village_id:@village.id),
+<%= link_to "投票へ移る", to_vote_village_games_path(village_id:@village.id),
                                 class: "waves-effect waves-light btn-large", remote: true%>
 <% elsif current_user.action_type == 'wait' %>
 他のプレイヤーが入力中です。
