--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,7 +27,7 @@
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "Help", help_path %></li>
       <% if signed_in? %>
-      <% if @village %>
+      <% if current_user.village_id %>
       <li><%= link_to "ゲーム終了", stop_village_games_path(@village, village_id:current_user.village_id),remote: true%></li>
       <li><%= link_to "リロード", reload_villages_path(village_id:@village.id), remote: true,id:"reload"%>
       <li>
