--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,9 @@
 
 <nav>
   <div class="nav-wrapper container">
-    <%= link_to "人狼", root_path, id: "logo",class:"brand-logo" %>
+    <% if signed_in? && current_user.village_id %>
+      <%= link_to @village.name, reload_villages_path(village_id:@village.id),class:"brand-logo", remote: true,id:"reload"%>
+    <% end %>
     <a href="#" data-activates="mobile-demo" class="button-collapse">
       <i class="material-icons">menu</i>
     </a>
