--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
       });
     </script>
     <%= render 'layouts/header' %>
-    <div class="container" style="margin-top: 30px;">
+    <div class="container">
       <div style="max-width: 600px;margin:auto;">
         <%= yield %>
       </div>
