--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,10 +7,14 @@ $link-color: color("light-blue", "darken-3") !default;
 p.resizeimage img { width: 100%; }
 
 input[type=text].setting {
-  height: 1rem;
+  height: 2rem;
   width: 23pt;
   text-align: center;
   color: #000000;
+  margin:0 0 15px;
+  font-size:20px;
+  line-height:1;
+  text-align:center;
 }
 
 .plusminus {
@@ -42,4 +46,15 @@ body > .container {
 .footer > .container {
   padding-right: 15px;
   padding-left: 15px;
+}
+
+.job_info {
+   font-size:5px;
+}
+#countDown {
+   margin:0 0 15px;
+   font-size:100px;
+   line-height:1;
+   text-align:center;
+   font-family: 'Oswald', sans-serif;
 }
